--- a/admin/package.json
+++ b/admin/package.json
@@ -6,10 +6,14 @@
     "@apollo/react-hooks": "^3.0.0",
     "apollo-boost": "^0.4.3",
     "apollo-link-context": "^1.0.18",
+    "draft-js": "^0.11.0",
+    "draftjs-to-html": "^0.8.4",
     "graphql": "^14.4.2",
     "graphql-tag": "^2.10.1",
+    "html-to-draftjs": "^1.4.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
+    "react-draft-wysiwyg": "^1.13.2",
     "react-router-dom": "^5.0.1",
     "react-scripts": "3.0.1",
     "uikit": "^3.1.7"
