--- a/server/package.json
+++ b/server/package.json
@@ -17,6 +17,7 @@
     "graphql": "^14.4.2",
     "graphql-import": "^0.7.1",
     "graphql-tools": "^4.0.5",
+    "graphql-type-datetime": "^0.2.4",
     "joi": "^14.3.1",
     "mongoose": "^5.6.8",
     "winston": "^3.2.1"
