--- a/admin/package.json
+++ b/admin/package.json
@@ -7,6 +7,7 @@
     "apollo-boost": "^0.4.3",
     "apollo-link-context": "^1.0.18",
     "draft-js": "^0.11.0",
+    "draft-js-export-html": "^1.4.1",
     "draftjs-to-html": "^0.8.4",
     "graphql": "^14.4.2",
     "graphql-tag": "^2.10.1",
