--- a/server/package.json
+++ b/server/package.json
@@ -20,6 +20,8 @@
     "graphql-type-datetime": "^0.2.4",
     "joi": "^14.3.1",
     "mongoose": "^5.6.8",
+    "node-mailjet": "^3.3.1",
+    "sendmail": "^1.6.1",
     "slugify": "^1.3.5",
     "winston": "^3.2.1"
   }
