--- a/admin/package.json
+++ b/admin/package.json
@@ -15,9 +15,11 @@
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-draft-wysiwyg": "^1.13.2",
+    "react-render-html": "^0.6.0",
     "react-router-dom": "^5.0.1",
     "react-s3": "^1.3.1",
     "react-scripts": "3.0.1",
+    "sendmail": "^1.6.1",
     "uikit": "^3.1.7"
   },
   "scripts": {
