--- a/client/package.json
+++ b/client/package.json
@@ -19,7 +19,8 @@
     "sirv-cli": "^0.4.4",
     "svelte-apollo": "^0.3.0",
     "svelte-routing": "^1.3.0",
-    "svelte-spa-router": "^1.2.0"
+    "svelte-spa-router": "^1.2.0",
+    "svero": "^1.0.0"
   },
   "scripts": {
     "build": "rollup -c",
