--- a/admin/package.json
+++ b/admin/package.json
@@ -19,7 +19,9 @@
     "react-router-dom": "^5.0.1",
     "react-s3": "^1.3.1",
     "react-scripts": "3.0.1",
+    "react-scrollbars-custom": "^4.0.20",
     "sendmail": "^1.6.1",
+    "simplebar": "^4.2.3",
     "uikit": "^3.1.7"
   },
   "scripts": {
