--- a/server/package.json
+++ b/server/package.json
@@ -19,6 +19,7 @@
     "graphql-tools": "^4.0.5",
     "graphql-type-datetime": "^0.2.4",
     "joi": "^14.3.1",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.6.8",
     "node-mailjet": "^3.3.1",
     "sendmail": "^1.6.1",
