--- a/admin/package.json
+++ b/admin/package.json
@@ -15,11 +15,13 @@
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-draft-wysiwyg": "^1.13.2",
+    "react-hooks-use-modal": "^1.0.5",
     "react-render-html": "^0.6.0",
     "react-router-dom": "^5.0.1",
     "react-s3": "^1.3.1",
     "react-scripts": "3.0.1",
     "react-scrollbars-custom": "^4.0.20",
+    "rodal": "^1.6.3",
     "sendmail": "^1.6.1",
     "simplebar": "^4.2.3",
     "uikit": "^3.1.7"
